[tool.poetry]
name = "tally-py"
version = "0.2.0"
description = ""
authors = ["deadaf <gahlyanrohit18@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tally"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
